Switched to Astro 7.6.0 (latest) with rux-checkbox overflow fix, removed workaround from App.scss (#51)

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -59,7 +59,3 @@ main {
     box-shadow: var(--container-color-border) 0 0 0 1px;
   }
 }
-
-rux-checkbox {
-  position: relative;
-}
